--- a/index.html
+++ b/index.html
@@ -3,88 +3,80 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hatena Blogs - Neo's GitHub Pages</title>
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="icon" href="/favicon-192x192.png" sizes="192x192" type="image/png">
-    <link rel="apple-touch-icon" href="/apple-touch-icon-152x152.png" sizes="152x152">
+    <title>@neos21/hatena-blogs : Hatena Blogs</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@neos21/neos-normalize@2.0.1/neos-normalize.min.css">
+    <link rel="icon" href="https://neos21.github.io/favicon.ico">
+    <style>
+
+body {
+  max-width: 42rem;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+    </style>
   </head>
   <body>
-    <header><a href="/index.html">Neo's GitHub Pages</a></header>
-    <main>
-      <section>
-        <h1>Hatena Blogs</h1>
-        <p>
-          <a href="https://www.npmjs.com/package/@neos21/hatena-blogs"><img src="https://img.shields.io/npm/v/@neos21/hatena-blogs.svg" alt="NPM Version" title="NPM Version"></a>
-          <a href="https://github.com/Neos21/hatena-blogs/packages/327523"><img src="https://img.shields.io/github/package-json/v/neos21/hatena-blogs?label=github" alt="GPR Version" title="GPR Version"></a>
-        </p>
-        <p>自分が運営しているはてなブログのテーマやカスタム HTML などを保存しておくリポジトリです。</p>
-        <dl>
-          <dt>Core</dt>
-          <dd>
-            <ul>
-              <li><a href="./src/styles/core.css">core.css</a></li>
-            </ul>
-          </dd>
-          <dt><a href="https://neos21.hatenablog.com/">Corredor</a></dt>
-          <dd>
-            <ul>
-              <li><a href="./dist/styles/corredor.css">corredor.css</a> (Source : <a href="./src/styles/corredor.css">corredor.css</a>)</li>
-              <li><a href="./src/html/corredor-head.html">corredor-head.html</a></li>
-              <li><a href="./src/html/corredor-header.html">corredor-header.html</a></li>
-              <li><a href="./src/html/corredor-sidebar.html">corredor-sidebar.html</a></li>
-              <li><a href="./src/html/corredor-footer.html">corredor-footer.html</a></li>
-            </ul>
-          </dd>
-          <dt><a href="https://neos21.hatenablog.jp/">Murga</a></dt>
-          <dd>
-            <ul>
-              <li><a href="./dist/styles/murga.css">murga.css</a> (Source : <a href="./src/styles/murga.css">murga.css</a>)</li>
-              <li><a href="./src/html/murga-head.html">murga-head.html</a></li>
-              <li><a href="./src/html/murga-header.html">murga-header.html</a></li>
-              <li><a href="./src/html/murga-sidebar.html">murga-sidebar.html</a></li>
-              <li><a href="./src/html/murga-footer.html">murga-footer.html</a></li>
-            </ul>
-          </dd>
-          <dt><a href="https://neos21.hateblo.jp/">El Mylar</a></dt>
-          <dd>
-            <ul>
-              <li><a href="./dist/styles/el-mylar.css">el-mylar.css</a> (Source : <a href="./src/styles/el-mylar.css">el-mylar.css</a>)</li>
-              <li><a href="./src/html/el-mylar-head.html">el-mylar-head.html</a></li>
-              <li><a href="./src/html/el-mylar-header.html">el-mylar-header.html</a></li>
-              <li><a href="./src/html/el-mylar-sidebar.html">el-mylar-sidebar.html</a></li>
-              <li><a href="./src/html/el-mylar-footer.html">el-mylar-footer.html</a></li>
-            </ul>
-          </dd>
-        </dl>
-        <section>
-          <h2>Author</h2>
-          <p><a href="https://neos21.net/">Neo</a></p>
-          <ul>
-            <li><a href="https://github.com/Neos21/hatena-blogs">GitHub - hatena-blogs</a></li>
-            <li><a href="https://neos21.github.io/hatena-blogs/">GitHub Pages - Hatena Blogs</a></li>
-            <li>
-              <a href="https://www.npmjs.com/package/@neos21/hatena-blogs">npm - @neos21/hatena-blogs <img src="https://img.shields.io/npm/v/@neos21/hatena-blogs.svg" alt="NPM Version" title="NPM Version"></a>
-              <ul>
-                <li><a href="https://unpkg.com/@neos21/hatena-blogs/">unpkg</a></li>
-                <li><a href="https://www.jsdelivr.com/package/npm/@neos21/hatena-blogs">jsDelivr</a></li>
-              </ul>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h2>Links</h2>
-          <ul>
-            <li><a href="https://neos21.net/">Neo's World</a></li>
-            <li><a href="https://neos21.hatenablog.com/">Corredor</a></li>
-            <li><a href="https://neos21.hatenablog.jp/">Murga</a></li>
-            <li><a href="https://neos21.hateblo.jp/">El Mylar</a></li>
-            <li><a href="https://neos21.github.io/">Neo's GitHub Pages</a></li>
-            <li><a href="https://github.com/Neos21/">GitHub - Neos21</a></li>
-          </ul>
-        </section>
-      </section>
-    </main>
-    <footer>Copyright &copy; 2016-2020 <a href="/index.html">Neo</a>, All rights reserved.</footer>
+
+<h1>@neos21/hatena-blogs : Hatena Blogs</h1>
+<p>
+  <a href="https://www.npmjs.com/package/@neos21/hatena-blogs"><img src="https://img.shields.io/npm/v/@neos21/hatena-blogs.svg" alt="NPM Version" title="NPM Version"></a>
+  <a href="https://github.com/Neos21/hatena-blogs/packages/327523"><img src="https://img.shields.io/github/package-json/v/neos21/hatena-blogs?label=github" alt="GPR Version" title="GPR Version"></a>
+</p>
+<p>自分が運営しているはてなブログのテーマやカスタム HTML などを保存しておくリポジトリです。</p>
+<dl>
+  <dt>Core</dt>
+  <dd>
+    <ul>
+      <li><a href="./src/styles/core.css">core.css</a></li>
+    </ul>
+  </dd>
+  <dt><a href="https://neos21.hatenablog.com/">Corredor</a></dt>
+  <dd>
+    <ul>
+      <li><a href="./dist/styles/corredor.css">corredor.css</a> (Source : <a href="./src/styles/corredor.css">corredor.css</a>)</li>
+      <li><a href="./src/html/corredor-head.html">corredor-head.html</a></li>
+      <li><a href="./src/html/corredor-header.html">corredor-header.html</a></li>
+      <li><a href="./src/html/corredor-sidebar.html">corredor-sidebar.html</a></li>
+      <li><a href="./src/html/corredor-footer.html">corredor-footer.html</a></li>
+    </ul>
+  </dd>
+  <dt><a href="https://neos21.hatenablog.jp/">Murga</a></dt>
+  <dd>
+    <ul>
+      <li><a href="./dist/styles/murga.css">murga.css</a> (Source : <a href="./src/styles/murga.css">murga.css</a>)</li>
+      <li><a href="./src/html/murga-head.html">murga-head.html</a></li>
+      <li><a href="./src/html/murga-header.html">murga-header.html</a></li>
+      <li><a href="./src/html/murga-sidebar.html">murga-sidebar.html</a></li>
+      <li><a href="./src/html/murga-footer.html">murga-footer.html</a></li>
+    </ul>
+  </dd>
+  <dt><a href="https://neos21.hateblo.jp/">El Mylar</a></dt>
+  <dd>
+    <ul>
+      <li><a href="./dist/styles/el-mylar.css">el-mylar.css</a> (Source : <a href="./src/styles/el-mylar.css">el-mylar.css</a>)</li>
+      <li><a href="./src/html/el-mylar-head.html">el-mylar-head.html</a></li>
+      <li><a href="./src/html/el-mylar-header.html">el-mylar-header.html</a></li>
+      <li><a href="./src/html/el-mylar-sidebar.html">el-mylar-sidebar.html</a></li>
+      <li><a href="./src/html/el-mylar-footer.html">el-mylar-footer.html</a></li>
+    </ul>
+  </dd>
+</dl>
+
+<h2>Links</h2>
+<ul>
+  <li><a href="https://neos21.net/">Neo's World</a></li>
+  <li><a href="https://github.com/Neos21/">GitHub - Neos21</a></li>
+  <li><a href="https://github.com/Neos21/hatena-blogs">GitHub - hatena-blogs</a></li>
+  <li><a href="https://neos21.github.io/hatena-blogs/">GitHub Pages - @neos21/hatena-blogs : Hatena Blogs</a></li>
+  <li>
+    <a href="https://www.npmjs.com/package/@neos21/hatena-blogs">npm - @neos21/hatena-blogs <img src="https://img.shields.io/npm/v/@neos21/hatena-blogs.svg" alt="NPM Version" title="NPM Version"></a>
+    <ul>
+      <li><a href="https://unpkg.com/@neos21/hatena-blogs/">unpkg</a></li>
+      <li><a href="https://www.jsdelivr.com/package/npm/@neos21/hatena-blogs">jsDelivr</a></li>
+    </ul>
+  </li>
+</ul>
+
   </body>
 </html>
